[package]
name = "after-test"
version = "0.1.1"
edition = "2021"
description = "A procedural macro that allows you to run a clean up function before each test"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
