[package]
name = "after-test"
version = "0.1.3"
edition = "2021"
description = "A procedural macro that allows you to run a clean up function after each test from a test module."
repository = "https://github.com/greged93/after-test"
homepage = "https://github.com/greged93/after-test"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
